# legixy

./: .gitignore  .legixy.toml  .trace-engine.toml  CALIBRATION.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  install.ps1  install.sh
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/commands/: advance.md  defect-fix.md  spec-add.md  spec-change.md
.github/workflows/: release.yml
.legixy/: .gitignore
crates/legixy-check/: Cargo.toml
crates/legixy-check/src/: lib.rs
crates/legixy-check/tests/: tc_bug005_semantic.rs  tc_lgx_001.rs
crates/legixy-cli/: Cargo.toml
crates/legixy-cli/src/: lib.rs  main.rs  refresh.rs
crates/legixy-cli/tests/: cli.rs  tc_bug007_cli_e2e.rs
crates/legixy-core/: Cargo.toml
crates/legixy-ctx/: Cargo.toml
crates/legixy-ctx/src/: audit_logger.rs  compiler.rs  db.rs  error.rs  lib.rs  result.rs  section_formatter.rs  upstream_walker.rs
crates/legixy-ctx/tests/: tc_bug007_subnode.rs  tc_lgx_002.proptest-regressions  tc_lgx_002.rs  tc_lgx_004.proptest-regressions  tc_lgx_004.rs
crates/legixy-db/: Cargo.toml
crates/legixy-embed/: Cargo.toml
crates/legixy-embed/benches/: perf08_embed_throughput.rs
crates/legixy-embed/src/: calibrate.rs  content.rs  contextual.rs  drift_detect.rs  embedder.rs  error.rs  lib.rs  model_version.rs  orchestrator.rs  report.rs  similarity.rs  store.rs
crates/legixy-embed/src/drift/: mod.rs
crates/legixy-embed/src/embedder/: onnx_backend.rs
crates/legixy-embed/src/snapshot/: mod.rs  types.rs
crates/legixy-embed/tests/: at_onnx_reproducibility.rs  at_rel07_concurrency.rs  tc_cache_cr_002.rs  tc_lgx_007.proptest-regressions  tc_lgx_007.rs  tc_lgx_010.proptest-regressions  tc_lgx_010.rs  tc_lgx_011.proptest-regressions  tc_lgx_011.rs  tc_lgx_012.proptest-regressions  tc_lgx_012.rs  tc_lgx_013.proptest-regressions  tc_lgx_013.rs
crates/legixy-feedback/: Cargo.toml
crates/legixy-feedback/src/: analyzer.rs  audit.rs  cli.rs  db.rs  embed.rs  error.rs  lib.rs  manager.rs  observer.rs  recorder.rs
crates/legixy-feedback/tests/: tc_feedback_semantic_loop.rs  tc_lgx_008.proptest-regressions  tc_lgx_008.rs
crates/legixy-graph/: Cargo.toml
crates/legixy-graph/src/: lib.rs  subnode.rs
crates/legixy-graph/tests/: tc_lgx_003.proptest-regressions  tc_lgx_003.rs
crates/legixy-mig/: Cargo.toml
crates/legixy-mig/src/: atomic.rs  backup.rs  error.rs  fixture.rs  init.rs  lib.rs  report.rs
crates/legixy-mig/src/migrate/: config_parse.rs  db_schema.rs  id_map.rs  matrix.rs  mod.rs  version.rs
crates/legixy-mig/tests/: tc_lgx_009.proptest-regressions  tc_lgx_009.rs
crates/legixy-nav/: Cargo.toml
crates/legixy-nav/src/: drift_pruner.rs  error.rs  impact.rs  investigate.rs  lib.rs  multi_traverser.rs  reporter.rs  result.rs
crates/legixy-nav/tests/: tc_lgx_005.proptest-regressions  tc_lgx_005.rs  tc_lgx_006.proptest-regressions  tc_lgx_006.rs
deploy/: .gitignore  README.md  build-deploy.sh  legixy  legixy-mcp
deploy/release/: legixy  legixy-mcp  legixy-mcp.cmd
docs/: legixy_cache_spec_v0_1_0.md  legixy_cli_compat_reference.md  legixy_foundational_spec.md  legixy_subnode_spec_v0.2.1.md  process.md
docs/acceptance-tests/: AT-LGX-001_embedding実機受け入れ.md
docs/adr/: ADR-LGX-001_migrate-from-to-path-canonical.md  ADR-LGX-002_embed-node-force-additive-extension.md  ADR-LGX-003_embedding-determinism-model.md  ADR-LGX-004_availability-over-audit-completeness.md  ADR-LGX-005_protect-irreproducible-data-on-corruption.md  ADR-LGX-006_human-only-cli-declarative-enforcement.md  ADR-LGX-007_nonfinite-score-and-model-version-policy.md  ADR-LGX-008_graphdag-category-separation.md  ADR-LGX-009_contextual-retrieval-determinism.md  ADR-LGX-010_mcp-child-process-timeout.md  ADR-LGX-011_migrate-concurrency-risk-acceptance.md  ADR-LGX-012_repository-restart-bootstrap.md  ADR-LGX-013_check-audit-health-additive-extension.md  ADR-LGX-014_v3-spec-divergence-governance.md  ADR-LGX-015_db-path-systematics.md  ADR-LGX-016_env-var-conventions.md  ADR-LGX-017_devproc-path-canonicalization.md  ADR-LGX-018_section4-rba-blocking-batch-ratification.md  ADR-LGX-019_yojukuryo-resolution.md  ADR-LGX-020_crate-split-and-shared-type-freeze.md  ADR-LGX-021_cross-dd-type-coordination.md  ADR-LGX-022_perf08-l12-throughput-reevaluation.md  ADR-LGX-023_refresh-subnodes-engine-db-reconciliation.md
docs/contracts/: CTR-CLI-001_cli-boundary-contract.md  CTR-MCP-001_mcp-boundary-contract.md
docs/decisions/: 2026-06-16_pai-process-hole.md
docs/delivery-design/: DLV-CLI-001_cli-dispatch.md  DLV-MCP-001_mcp-dispatch.md
docs/detailed-design/: DD-LGX-001_グラフ読み込みと検証.md  DD-LGX-002_コンテキスト解決.md  DD-LGX-003_サブノード自動抽出.md  DD-LGX-004_粒度制御付きコンテキスト解決.md  DD-LGX-005_逆方向探索.md  DD-LGX-006_順方向探索.md  DD-LGX-007_embedding生成とドリフト検出.md  DD-LGX-008_フィードバックループ.md  DD-LGX-009_プロジェクト初期化とマイグレーション.md  DD-LGX-010_トレーサビリティ健全性監査.md  DD-LGX-011_閾値キャリブレーション.md  DD-LGX-012_ベースライン凍結管理.md  DD-LGX-013_standaloneドリフト対比.md
docs/gap-analysis/: GAP-LGX-001_uc網羅宣言と下位spec拡張の不一致.md  GAP-LGX-002_不変条件マトリクスの整合検証手段欠如.md  GAP-LGX-003_検証owner要否ポリシーの欠如.md  GAP-LGX-004_umbrella変更ポリシー統治手順の欠如.md  GAP-LGX-005_mcp-inv-1実装owner語義の不整合.md  GAP-LGX-023_refresh-subnodes-rewrite-atomicity.md  GAP-LGX-024_refresh-backup-naming-retention.md  GAP-LGX-041_context-log書込失敗時の本処理成否.md  GAP-LGX-043_上流に存在しないパスと部分欠損の扱い.md  GAP-LGX-045_sectionsの不正形式入力の扱い.md  GAP-LGX-047_outline-only見出し皆無時の出力.md  GAP-LGX-061_空グラフ時のcheck挙動.md  GAP-LGX-064_形式検証カテゴリのseverity割当完全性.md  GAP-LGX-065_Ok_severityの使用条件.md  GAP-LGX-072_全層checkの冪等性射程.md  GAP-LGX-081_custom-エッジの方向セマンティクス.md  GAP-LGX-085_max_depth打ち切りの可観測性.md  GAP-LGX-101_空テキストノードのembedding生成.md  GAP-LGX-102_巨大テキストのトークン上限超過時の扱い.md  GAP-LGX-103_モデル出力shapeの異常時の扱い.md  GAP-LGX-104_ゼロベクトルcosineと浮動小数点推論の数値安定性.md  GAP-LGX-105_cosine類似度の値域定義.md  GAP-LGX-106_embed時のモデル不在読込失敗の挙動.md  GAP-LGX-108_embed部分失敗とトランザクション境界の整合.md  (+110 more)
scripts/: check-latest-verdict.sh  check-pending-verdict.sh  count-fix-cycle.sh  extract-verdict.sh  fetch-model.sh  guard-quality-baseline.sh  trace-check-light.sh  trace-check.sh
ts-mcp/: package-lock.json  package.json
(+203 files in other folders)
