[workspace]
resolver = "2"
members = [
    "crates/legixy-core",
    "crates/legixy-graph",
    "crates/legixy-db",
    "crates/legixy-ctx",
    "crates/legixy-check",
    "crates/legixy-nav",
    "crates/legixy-embed",
    "crates/legixy-feedback",
    "crates/legixy-mig",
    "crates/legixy-cli",
]

[workspace.package]
version = "0.4.0-alpha4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/OWNER/legixy"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
proptest = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"
tempfile = "3"
regex = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
clap = { version = "4", features = ["derive"] }

legixy-core = { path = "crates/legixy-core" }
legixy-graph = { path = "crates/legixy-graph" }
legixy-db = { path = "crates/legixy-db" }
legixy-ctx = { path = "crates/legixy-ctx" }
legixy-check = { path = "crates/legixy-check" }
legixy-nav = { path = "crates/legixy-nav" }
legixy-embed = { path = "crates/legixy-embed" }
legixy-feedback = { path = "crates/legixy-feedback" }
legixy-mig = { path = "crates/legixy-mig" }
legixy-cli = { path = "crates/legixy-cli" }
