[package]
name = "legixy-feedback"
version.workspace = true
edition.workspace = true

[dependencies]
legixy-core.workspace = true
legixy-check.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
